Fix native image compilation under Java 19
This commit actually fixes a couple issues:

1. native compilation failed under Java 19 because of the use of virtual threads
2. source/target compatiblity wasn't set on samples, which trigerred a number of
warnings for Kotlin and, probably, wasn't the expected behavior